# spectra-analyzer

./: pyproject.toml  radial_velocity.csv
data/: ObsDat.txt
data/obs/: obs_0  obs_1  obs_10  obs_11  obs_12  obs_13  obs_14  obs_15  obs_16  obs_17  obs_18  obs_19  obs_2  obs_20  obs_21  obs_22  obs_23  obs_24  obs_25  obs_26  obs_27  obs_28  obs_29  obs_3  obs_4  obs_5  obs_6  obs_7  obs_8  obs_9
gplot/scripts/: ph_vel.p  rad_vel_err.p
spectra-analyzer/: __init__.py  __main__.py  plot.py
spectra-analyzer/lines/: __init__.py
spectra-analyzer/models/: observation.py  spectra.py
spectra-analyzer/utils/: __init__.py  math.py  obs_reader.py  reader.py
