[project]
name = "spectra-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
